auto size flex items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,18 +110,6 @@ input:focus, textarea:focus, input[type="text"]:focus {
     position: relative;
 }
 
-@media (min-width: 990px) {
-	.liveTV {
-		padding: 70px;
-	}
-}
-
-@media (max-width: 990px) and (min-width: 768px) {
-	.liveTV {
-		padding: 20px;
-	}
-}
-
 @media (max-width: 768px) {
     .brand {
         width: 185px;
@@ -447,8 +435,9 @@ input:focus, textarea:focus, input[type="text"]:focus {
 
 .liveTV {
     background: url(../img/livetvbackground.png);
-    background-size: auto 118%;
+    background-size: 118% auto;
     background-position-y: -15px;
+    padding: 30px;
 }
 
 .liveTV img {
@@ -494,30 +483,29 @@ input:focus, textarea:focus, input[type="text"]:focus {
     background: url(../img/catch_background_working.png);
     background-repeat: repeat-y;
     padding: 30px;
-    background-size: 118% auto;
-    padding: 30px;
     background-position-x: -15px;
+    background-size: auto 118%;
 }
 
 .tvSeries {
     background: url(../img/Untitled-1.png);
     background-repeat: repeat-y;
     padding: 30px;
-    background-size: 118% auto;
-    padding: 30px;
+    background-size: auto 118%;
     background-position-x: -15px;
 }
 
 .Mybtns a.btn {
-    background: #73ad88;
+    background: #6495ed;
     color: #fff;
     width: 100%;
     padding: 10px 10px;
-    border-color: #73ad88;
 }
 
 .Mybtns a.btn:hover {
     border-color: #fff;
+    color: #fff !important;
+    font-size: large;
 }
 
 .account i {
@@ -547,15 +535,12 @@ input:focus, textarea:focus, input[type="text"]:focus {
 }
 
 @media screen and (max-width: 990px) and (min-width: 767px) {
-    .liveTV img {
+    .liveTV img, .movieVOD img, .tvSeries img {
         height: 100px;
     }
 }
 
 @media screen and (max-width: 820px) {
-    .liveTV, .movieVOD, .tvSeries {
-        margin-top: 5px;
-    }
 
     .liveTV h3, .movieVOD h3, .tvSeries h3 {
         font-size: 25px;
@@ -567,9 +552,6 @@ input:focus, textarea:focus, input[type="text"]:focus {
 }
 
 @media screen and (max-width: 990px) {
-    .liveTV, .movieVOD, .tvSeries {
-        margin-top: 5px;
-    }
 
     .Mybtns a.btn {
         margin-top: 10px;
