--- a/src/Templates/streamsMovie.html.twig
+++ b/src/Templates/streamsMovie.html.twig
@@ -13,6 +13,9 @@
             <a href="{{ baseUrlAbsolute ~ homeUrlAbsolute }}" tabindex="5" class="btn">
                 <i class="fa fa-home"></i>
             </a>
+            <a tabindex="5" class="btn toggleSidebar">
+                <i class="fa fa-bars"></i>
+            </a>
             {% if catName != '' %}
                 {% if isHidden %}
                 <a href="{{ baseUrlAbsolute }}/category/unhide/movie/{{ currentCat }}" tabindex="6" class="btn">
@@ -63,7 +66,7 @@
         </div>
     </div>
 
-    <div id="flex" class="flex-images col-sm-9 col-xs-9 col-md-10">
+    <div id="flex" class="flex-full flex-images col-sm-offset-3 col-sm-9 col-xs-offset-3 col-xs-9 col-md-offset-2 col-md-10">
         {% if not contentAlloweded %}
             <form method="post" class="form-inline" >
                 <input type="password" name="pass" class="form-control" autocomplete="off" placeholder="Password">
@@ -92,7 +95,7 @@
             {% endfor %}
         {% endif %}
     </div>
-    <div class="sidenav col-sm-offset-9 col-sm-3 col-xs-offset-9 col-xs-3 col-md-offset-10 col-md-2">
+    <div class="sidenav col-sm-3 col-xs-3 col-md-2">
         <ul>
             <a href="{{ baseUrlAbsolute }}/streams/suggestMovie"
                style="{% if currentCat == 'suggest' %}color:white{% endif %}">
