--- a/src/Templates/homeMain.html.twig
+++ b/src/Templates/homeMain.html.twig
@@ -98,9 +98,10 @@
                         </a>
                     </h4>
                     <h4 class="text-center" style="color: #fff; top: 50px; float:left;width: 100%;position: relative;    text-transform: none;">CONNECTED AS: {{ connectedAs }}</h4>
-{#                    <small class="text-center" style="color: #fff; top: 50px; float:left;width: 100%;position: relative;">#}
-{#                        {{ userAgent }}#}
-{#                    </small>#}
+                    <small class="text-center" style="color: #fff; top: 50px; float:left;width: 100%;position: relative;">
+                        {{ userAgent }}
+                    </small>
+                    <small class="text-center" style="color: #fff; top: 50px; float:left;width: 100%;position: relative;" id="screenSize"></small>
                 </div>
             </div>
         </div>
@@ -110,6 +111,7 @@
 {% block js %}
     <script type="text/javascript">
         $('#divLive').focus();
+        $('#screenSize').html(screen.width + 'x' + screen.height);
     </script>
 {% endblock %}
 
