--- a/src/Templates/streamsSerie.html.twig
+++ b/src/Templates/streamsSerie.html.twig
@@ -65,7 +65,7 @@
             </div>
         </div>
     </div>
-    <div id="flex" class="flex-images col-sm-offset-3 col-sm-9 col-xs-offset-3 col-xs-9 col-md-offset-2 col-md-10">
+    <div id="flex" class="flex-full flex-images col-sm-offset-3 col-sm-9 col-xs-offset-3 col-xs-9 col-md-offset-2 col-md-10">
         {% for stream in streams %}
             <a href="{{ baseUrlAbsolute }}/streams/serieInfo/{{ stream.serieId }}"
                tabindex="1"
@@ -151,7 +151,6 @@
         $('.item-link').on('long-press', function(e) {
             alert('thisislong');
         });
-        $('.toggleSidebar').click();
     </script>
     <script src="{{ baseUrlAbsolute }}/js/long-press-event.min.js"></script>
 {% endblock %}
