--- a/src/Templates/Module/lazyload.html.twig
+++ b/src/Templates/Module/lazyload.html.twig
@@ -46,6 +46,10 @@
                 "{{ baseUrlAbsolute }}/streams/{{ type }}/{{ currentCat }}/{{ sort }}/{{ search }}?start=" + itemsLoad + '&' + urlQuery,
                 function(data) {
                     $('#flex').append(data);
+                    setTimeout(function(){
+                        setDeviceType();
+                        setFlexItemSize();
+                    }, 250);
                 }
             );
         }
