--- a/src/Templates/streamsLive.html.twig
+++ b/src/Templates/streamsLive.html.twig
@@ -58,10 +58,10 @@
             </div>
             <a tabindex="4" class="btn" id="search">
                 <i class="fa fa-search"></i>
-            </a>
+             </a>
         </div>
     </div>
-    <div class="sidenav col-sm-3 col-xs-3 col-md-2">
+    <div class="sidenav col-sm-4 col-xs-12 col-md-4">
         <ul>
             <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/all"
                style="{% if currentCat == 'all' and sort != 5 %}color:white{% endif %}"
@@ -105,7 +105,7 @@
             {% endfor %}
         </ul>
     </div>
-    <div id="flex" class="flex-full flex-images col-sm-offset-3 col-sm-9 col-xs-offset-3 col-xs-9 col-md-offset-2 col-md-10">
+    <div id="flex" class="flex-images col-sm-12">
         {% if not contentAlloweded %}
         <form method="post" class="form-inline" >
             <input type="password" name="pass" class="form-control" autocomplete="off" placeholder="Password">
