--- a/src/Templates/streamsMovie.html.twig
+++ b/src/Templates/streamsMovie.html.twig
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <div id="flex" class="flex-full flex-images col-sm-offset-3 col-sm-9 col-xs-offset-3 col-xs-9 col-md-offset-2 col-md-10">
+    <div id="flex" class="flex-images col-sm-12">
         {% if not contentAlloweded %}
             <form method="post" class="form-inline" >
                 <input type="password" name="pass" class="form-control" autocomplete="off" placeholder="Password">
@@ -95,7 +95,7 @@
             {% endfor %}
         {% endif %}
     </div>
-    <div class="sidenav col-sm-3 col-xs-3 col-md-2">
+    <div class="sidenav col-sm-4 col-xs-12 col-md-4">
         <ul>
             <a href="{{ baseUrlAbsolute }}/streams/suggestMovie"
                style="{% if currentCat == 'suggest' %}color:white{% endif %}">
