--- a/src/Templates/streamsSerie.html.twig
+++ b/src/Templates/streamsSerie.html.twig
@@ -65,7 +65,7 @@
             </div>
         </div>
     </div>
-    <div id="flex" class="flex-full flex-images col-sm-offset-3 col-sm-9 col-xs-offset-3 col-xs-9 col-md-offset-2 col-md-10">
+    <div id="flex" class="flex-images col-sm-12">
         {% for stream in streams %}
             <a href="{{ baseUrlAbsolute }}/streams/serieInfo/{{ stream.serieId }}"
                tabindex="1"
@@ -87,7 +87,7 @@
             </a>
         {% endfor %}
     </div>
-    <div class="sidenav col-sm-3 col-xs-3 col-md-2">
+    <div class="sidenav col-sm-4 col-xs-12 col-md-4">
         <ul>
             <a href="{{ baseUrlAbsolute }}/streams/suggestSerie"
                style="{% if currentCat == 'suggest' %}color:white{% endif %}"
